# E-Commerce-ChatBot

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
app/: faq.py  router.py  smalltalk.py  sql.py
resources/: duplicate_products.csv  faq_data.csv  unavailable_products.csv
web_scrapping/: csv_sqllite.py  db.sqlite  flipkart_data_extraction.ipynb  flipkart_product_data.csv
